--- a/maj/assets/css/index.css
+++ b/maj/assets/css/index.css
@@ -6,6 +6,7 @@
 
 /* style général */
 :root{
+    /* variables globales à modifier selon la charte graphique */
     --font-family: Roboto, sans-serif;
     --primary-color: #000000;
     --secondary-color: #ffffff;
@@ -16,6 +17,24 @@ body{
     margin: 5%;
     font-family: var(--font-family);
     color: var(--primary-color);
+}
+
+/* style général des titres */
+h2{
+    /* grid-column: 1 / span 12; */
+    margin: 2% 0 2% 0;
+    font-size: 2.5em;
+}
+
+h3{
+    margin-bottom: 1%;
+    font-size: 1.5em;
+    line-height: 1.1em;
+}
+
+/* style général du texte */
+p:not(footer p){
+    margin-bottom: 2%;
 }
 
 /* style général des liens */
@@ -29,6 +48,14 @@ a{
     text-decoration: none;
 }
 
+/* style général des images */
+img{
+    display: block;
+    margin: auto;
+    width: 100%;
+    height: auto;
+}
+
 a:hover{
     color: var(--highlight-color);
 }
@@ -40,14 +67,14 @@ header, main, footer{
 }
 
 /* éléments du header */
-/* logo */
+/* logo MAJ */
 h1{
     grid-column: 1;
-    width: auto;
     font-size: 5em;
     font-weight: bold;
 }
 
+/* enter */
 #enter{
     grid-column: 2 / span 11;
     align-self: flex-start;
@@ -55,10 +82,11 @@ h1{
     font-size: 1.5em;
 }
 
+/* qui ? */
 header h1+a{
     grid-column: 2;
     align-self: center;
-    margin-left: 10%;
+    margin-left: 20%;
     font-size: 1.5em;
 }
 
@@ -77,42 +105,105 @@ header ul{
 header li{
     font-size: 1.3em;
     font-weight: bold;
+    text-transform: lowercase;
 }
 
 /* éléments du main */
-#about{
+main > *{
     grid-column: 1 / span 12;
+}
+
+/* texte d'introduction */
+#about{
+    /* grid-column: 1 / span 12; */
     margin: 2% 0 2% 0;
-    width: 80%;
+    width: 100%;
     font-size: 2em;
 }
 
-h2{
-    grid-column: 1 / span 12;
-    line-height: 1em;
-    margin-bottom: 2%;
+/* ticker et slider */
+.splide{
+    /* grid-column: 1 / span 12; */
+    margin-top: 2%;
 }
 
+/* ticker */
+#ticker{
+    overflow: hidden;;
+}
+
+#ticker .splide__arrow,
+#ticker .splide__pagination{
+    display: none;
+}
+
+/* billets actualités / services */
 figure{
     grid-column: span 3;
-    margin: 5% 5% 5% 0;
+    margin: 0 5% 5% 0;
     width: 80%;
 }
 
 figure img{
     margin-bottom: 2%;
+}
+
+figure p{
+    margin-top: 3%;
+    margin-bottom: 2%;
+}
+
+/* articles actualités / services */
+/* article{
+    grid-column: 1 / span 12;
+} */
+
+article img{
+    margin-bottom: 2%;
+}
+
+/* contact */
+/* google map */
+iframe{
     width: 100%;
+    height: 300px;
+}
+
+/* équipe */
+.team{
+    grid-column: span 3;
+    margin: 5% 10% 5% 10%;
+}
+
+.team dl{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.team dt{
+    font-weight: bold;
+}
+
+.team dd{
+    color: var(--highlight-color);
+}
+
+/* crédits */
+h4{
+    margin-top: 2%;
 }
 
 /* éléments du footer */
 footer{
     bottom: 0;
-    margin-top: 2%;
+    margin-top: 5%;
     padding-top: 2%;
     width: 100%;
     border-top: solid 2px var(--primary-color)
 }
 
+/* partenaires */
 footer section:first-child{
     grid-column: 1 / span 12;
     margin-bottom: 2%;
@@ -121,16 +212,18 @@ footer section:first-child{
     background-color: var(--highlight-color);
 }
 
-footer section:nth-child(n+2){
-    grid-column: span 2;
-}
-
 footer img{
     margin-left: 5%;
     margin-right: 5%;
     width: 5%;
 }
 
+/* où nous trouver / mentions légales / réseau sociaux */
+footer section:nth-child(n+2){
+    grid-column: span 2;
+}
+
+/* logo réseaux sociaux */
 footer svg{
     margin-left: 5%;
     margin-right: 5%;
