--- a/maj/assets/css/index.css
+++ b/maj/assets/css/index.css
@@ -10,7 +10,7 @@
     --font-family: Roboto, sans-serif;
     --primary-color: #000000;
     --secondary-color: #ffffff;
-    --highlight-color: #808080;
+    --highlight-color: rgb(190, 65, 190);
 }
 
 body{
@@ -46,6 +46,22 @@ a{
     color: var(--primary-color);
     font-weight: bold;
     text-decoration: none;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.25s;
+}
+
+a:hover:not(h1 a){
+    border-bottom: 2px solid var(--primary-color);
+}
+
+.active{
+    color: var(--highlight-color);
+    border-bottom: 2px solid var(--highlight-color);
+}
+
+.active:hover{
+    color: var(--highlight-color);
+    border-bottom: 2px solid var(--highlight-color);
 }
 
 /* style général des images */
@@ -54,10 +70,6 @@ img{
     margin: auto;
     width: 100%;
     height: auto;
-}
-
-a:hover{
-    color: var(--highlight-color);
 }
 
 /* mise en place de la grille */
@@ -86,7 +98,7 @@ h1{
 header h1+a{
     grid-column: 2;
     align-self: center;
-    margin-left: 20%;
+    justify-self: center;
     font-size: 1.5em;
 }
 
@@ -122,10 +134,9 @@ main > *{
 }
 
 /* ticker et slider */
-.splide{
-    /* grid-column: 1 / span 12; */
+/* .splide{
     margin-top: 2%;
-}
+} */
 
 /* ticker */
 #ticker{
@@ -138,8 +149,9 @@ main > *{
 }
 
 #ticker .splide__slide{
-    margin-left: 2%;
-    width: 30%;
+    margin: auto;
+    padding: 2%;
+    width: auto;
 }
 
 /* billets actualités / services */
@@ -213,7 +225,7 @@ footer section:first-child{
     margin-bottom: 2%;
     padding-top: 2%;
     padding: 5%;
-    background-color: var(--highlight-color);
+    background-color: lightgray;
 }
 
 footer img{
