--- a/maj/assets/css/index.css
+++ b/maj/assets/css/index.css
@@ -23,16 +23,24 @@ body{
 h2{
     /* grid-column: 1 / span 12; */
     margin: 2% 0 2% 0;
-    font-size: 2.5em;
+    font-size: 3vw;
 }
 
 h3{
     margin-bottom: 1%;
-    font-size: 1.5em;
+    font-size: 2vw;
     line-height: 1.1em;
 }
 
+h4{
+    font-size: 1.3vw;
+}
+
 /* style général du texte */
+p{
+    font-size: 1.3vw;
+}
+
 p:not(footer p){
     margin-bottom: 2%;
 }
@@ -50,16 +58,11 @@ a{
     transition: border-bottom 0.25s;
 }
 
-a:hover:not(h1 a){
+a:hover:not(h1 a, section:last-child a, .active){
     border-bottom: 2px solid var(--primary-color);
 }
 
 .active{
-    color: var(--highlight-color);
-    border-bottom: 2px solid var(--highlight-color);
-}
-
-.active:hover{
     color: var(--highlight-color);
     border-bottom: 2px solid var(--highlight-color);
 }
@@ -80,9 +83,9 @@ header, main, footer{
 
 /* éléments du header */
 /* logo MAJ */
-h1{
+header h1{
     grid-column: 1;
-    font-size: 5em;
+    font-size: 7vw;
     font-weight: bold;
 }
 
@@ -91,7 +94,7 @@ h1{
     grid-column: 2 / span 11;
     align-self: flex-start;
     justify-self: end;
-    font-size: 1.5em;
+    font-size: 2vw;
 }
 
 /* qui ? */
@@ -99,7 +102,7 @@ header h1+a{
     grid-column: 2;
     align-self: center;
     justify-self: center;
-    font-size: 1.5em;
+    font-size: 2vw;
 }
 
 /* navbar */
@@ -115,7 +118,7 @@ header ul{
 }
 
 header li{
-    font-size: 1.3em;
+    font-size: 1.8vw;
     font-weight: bold;
     text-transform: lowercase;
 }
@@ -130,7 +133,7 @@ main > *{
     /* grid-column: 1 / span 12; */
     margin: 2% 0 2% 0;
     width: 100%;
-    font-size: 2em;
+    font-size: 3.5vw;
 }
 
 /* ticker et slider */
@@ -180,6 +183,33 @@ article img{
 }
 
 /* contact */
+/* formulaire */
+form div{
+    display: flex;
+    flex-direction: column;
+    margin-top: 1%;
+}
+
+form label{
+    margin-bottom: 1%;
+}
+
+form label span{
+    color: var(--highlight-color);
+}
+
+form input, form select{
+    padding: 0.5%;
+}
+
+form textarea{
+    padding: 0.5%;
+}
+
+input[type=submit]{
+    align-self: flex-start;
+}
+
 /* google map */
 iframe{
     width: 100%;
@@ -223,8 +253,8 @@ footer{
 footer section:first-child{
     grid-column: 1 / span 12;
     margin-bottom: 2%;
-    padding-top: 2%;
-    padding: 5%;
+    padding: 5% 0 5% 0;
+    width: 100%;
     background-color: lightgray;
 }
 
@@ -240,9 +270,17 @@ footer section:nth-child(n+2){
 }
 
 /* logo réseaux sociaux */
+footer a{
+    font-size: 1.3vw;
+}
+
 footer svg{
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-right: 10%;
     width: 10%;
     fill: var(--primary-color);
+    transition: fill 0.25s;
+}
+
+footer svg:hover{
+    fill: var(--highlight-color);
 }
