mise a jour semaine 2

--- a/maj/assets/css/media-queries.css
+++ b/maj/assets/css/media-queries.css
@@ -38,9 +38,9 @@
     grid-column: 1 / span 2;
     }
 
-    #slider{
+    /* #slider{
         display: none;
-    }
+    } */
 
     figure{
         width: 100%;
