--- a/maj/assets/css/index.css
+++ b/maj/assets/css/index.css
@@ -10,7 +10,8 @@
     --font-family: Roboto, sans-serif;
     --primary-color: #000000;
     --secondary-color: #ffffff;
-    --highlight-color: rgb(190, 65, 190);
+    --highlight-color: #be41be;
+    --bg-color-blue: #009ece;
 }
 
 body{
@@ -21,8 +22,7 @@ body{
 
 /* style général des titres */
 h2{
-    /* grid-column: 1 / span 12; */
-    margin: 2% 0 2% 0;
+    margin: 2% 0 1% 0;
     font-size: 3vw;
 }
 
@@ -51,18 +51,18 @@ li{
 }
 
 a{
-    color: var(--primary-color);
     font-weight: bold;
     text-decoration: none;
+    color: var(--primary-color);
     border-bottom: 2px solid transparent;
     transition: border-bottom 0.25s;
 }
 
-a:hover:not(h1 a, section:last-child a, .active){
+a:hover:not(h1 a, section:last-child a, .current){
     border-bottom: 2px solid var(--primary-color);
 }
 
-.active{
+.current{
     color: var(--highlight-color);
     border-bottom: 2px solid var(--highlight-color);
 }
@@ -79,6 +79,7 @@ img{
 header, main, footer{
     display: grid;
     grid-template-columns: repeat(12, 1fr);
+    /* column-gap: 5%; */
 }
 
 /* éléments du header */
@@ -133,14 +134,10 @@ main > *{
     /* grid-column: 1 / span 12; */
     margin: 2% 0 2% 0;
     width: 100%;
-    font-size: 3.5vw;
+    font-size: 3vw;
 }
 
 /* ticker et slider */
-/* .splide{
-    margin-top: 2%;
-} */
-
 /* ticker */
 #ticker{
     overflow: hidden;;
@@ -158,14 +155,33 @@ main > *{
 }
 
 /* billets actualités / services */
+.news{
+    grid-column: span 4;
+    /* margin: 0 5% 5% 0; */
+    width: 90%;
+    border: solid 2px black;
+}
+
+.news h3{
+    margin: 10% 10% 0 10%;
+}
+
+.news p{
+    margin: 2% 10% 10% 10%;
+}
+
 figure{
     grid-column: span 3;
-    margin: 0 5% 5% 0;
+    /* margin: 0 5% 5% 0; */
     width: 80%;
 }
 
 figure img{
     margin-bottom: 2%;
+}
+
+figure h3{
+    margin-top: 5%;
 }
 
 figure p{
@@ -174,10 +190,6 @@ figure p{
 }
 
 /* articles actualités / services */
-/* article{
-    grid-column: 1 / span 12;
-} */
-
 article img{
     margin-bottom: 2%;
 }
@@ -217,23 +229,7 @@ iframe{
 }
 
 /* équipe */
-.team{
-    grid-column: span 3;
-    margin: 5% 10% 5% 10%;
-}
 
-.team dl{
-    margin-top: 5%;
-    text-align: center;
-}
-
-.team dt{
-    font-weight: bold;
-}
-
-.team dd{
-    color: var(--highlight-color);
-}
 
 /* crédits */
 h4{
