--- a/maj/assets/css/media-queries.css
+++ b/maj/assets/css/media-queries.css
@@ -1,15 +1,17 @@
 @media only screen and (max-width: 450px){
     header, main, footer{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
     }
 
     h2{
-    font-size: 6vw;
+        margin-top: 5%;
+        font-size: 5vw;
     }
 
     h3{
-        font-size: 5vw;
+        margin-bottom: 1%;
+        font-size: 3.5vw;
     }
 
     h4{
@@ -17,7 +19,7 @@
     }
 
     p{
-        font-size: 3vw;
+        font-size: 2.8vw;
     }
     
     header h1{
@@ -25,9 +27,9 @@
     }
 
     header h1+a{
-    grid-column: 2;
-    justify-self: flex-start;
-    margin-left: 5%;
+        grid-column: 2;
+        justify-self: flex-start;
+        margin-left: 5%;
     }
 
     header a:not(h1 a){
@@ -35,15 +37,22 @@
     }
 
     main > *{
-    grid-column: 1 / span 2;
+        grid-column: 1 / span 3;
     }
 
-    /* #slider{
-        display: none;
-    } */
+    #about{
+    font-size: 6vw;
+}
 
-    figure{
-        width: 100%;
+    .news{
+        grid-column: span 3;
+        margin: 0 2% 2% 0;
+        padding: 5%;
+        height: auto;
+    }
+
+    .news a{
+        font-size: 2.8vw;
     }
 
     form input:not(input[type=submit]), form select, form textarea{
@@ -51,16 +60,23 @@
     }
 
     footer section{
-        margin-top: 5%;
+        margin-top: 2%;
         width: 100%;
     }
 
     footer section:first-child{
-        grid-column: span 2;
+        grid-column: span 3;
+        flex-flow: row wrap;
+    }
+
+    footer img{
+        margin: 2%;
+        width: 12%;
+        max-height: 30px;
     }
 
     footer section:nth-child(n+2){
-    grid-column: span 1;
+        grid-column: span 1;
     }
 
     footer a{
