--- a/maj/assets/css/media-queries.css
+++ b/maj/assets/css/media-queries.css
@@ -5,17 +5,7 @@
     }
 
     h2{
-        margin-top: 5%;
-        font-size: 5vw;
-    }
-
-    h3{
-        margin-bottom: 1%;
-        font-size: 3.5vw;
-    }
-
-    h4{
-        font-size: 3vw;
+        font-size: 6vw;
     }
 
     p{
@@ -53,6 +43,23 @@
 
     .news a{
         font-size: 2.8vw;
+    }
+
+    .news h3{
+        margin-bottom: 1%;
+        font-size: 3.5vw;
+    }
+
+    .accordion h2{
+        font-size: 4.5vw;
+    }
+
+    .accordion sup{
+        font-size: 1.8vw;
+    }
+
+    .panel h3{
+        font-size: 3vw;
     }
 
     form input:not(input[type=submit]), form select, form textarea{
