--- a/maj/assets/css/index.css
+++ b/maj/assets/css/index.css
@@ -75,19 +75,12 @@ header h1{
     font-weight: bold;
 }
 
-/* enter */
-#enter{
+/* entrez / qui ? */
+#enter, header h1+a{
     grid-column: 2 / span 11;
-    align-self: flex-start;
-    justify-self: end;
-    font-size: 2vw;
-}
-
-/* qui ? */
-header h1+a{
-    grid-column: 2;
+    margin-left: 2%;
     align-self: center;
-    justify-self: center;
+    justify-self: flex-start;
     font-size: 2vw;
 }
 
@@ -115,11 +108,20 @@ main > *{
 }
 
 /* texte d'introduction */
-#about{
-    /* grid-column: 1 / span 12; */
-    margin: 2% 0 2% 0;
-    width: 100%;
+#about h2{
+    margin-bottom: 0;
+    font-size: 2.5vw;
+}
+
+#about p:nth-child(1){
     font-size: 3vw;
+}
+
+#about p{
+    /* grid-column: 1 / span 12; */
+    margin-bottom: 3%;
+    width: 100%;
+    font-size: 2vw;
 }
 
 /* ticker et slider */
@@ -258,6 +260,11 @@ article h2{
 
 /* contact */
 /* formulaire */
+form{
+    margin-top: 1%;
+    margin-bottom: 3%;
+}
+
 form div{
     display: flex;
     flex-direction: column;
@@ -286,6 +293,7 @@ input[type=submit]{
 
 /* google map */
 iframe{
+    margin-top: 2%;
     width: 100%;
     height: 300px;
 }
