--- a/maj/assets/css/media-queries.css
+++ b/maj/assets/css/media-queries.css
@@ -4,25 +4,33 @@
         grid-template-columns: repeat(3, 1fr);
     }
 
-    h2{
+    h1{
         font-size: 6vw;
     }
 
-    p{
-        font-size: 2.8vw;
-    }
-    
-    header h1{
-        font-size: 20vw;
+    h2{
+        font-size: 5vw;
     }
 
-    #enter, header h1+a{
+    h3{
+        font-size: 3.5vw;
+    }
+
+    p{
+        font-size: 3vw;
+    }
+    
+    header #logo img{
+        width: 35vw;
+    }
+
+    #entrez, #qui{
         grid-column: 2;
         justify-self: flex-start;
         margin-left: 5%;
     }
 
-    #enter, header a:not(h1 a){
+    #entrez, #qui, header a{
         font-size: 5vw;
     }
 
@@ -30,15 +38,15 @@
         grid-column: 1 / span 3;
     }
 
-    #about h2{
+    #apropos h2{
         font-size: 6vw;
     }
 
-    #about p:nth-child(1){
+    #apropos p:nth-child(1){
         font-size: 6vw;
     }
 
-    #about p{
+    #apropos p{
         font-size: 5vw;
 }
 
