--- a/maj/assets/css/media-queries.css
+++ b/maj/assets/css/media-queries.css
@@ -50,18 +50,18 @@
         font-size: 5vw;
 }
 
-    .news{
+    .actualites{
         grid-column: span 3;
         margin: 0 2% 2% 0;
         padding: 5%;
         height: auto;
     }
 
-    .news a{
+    .actualites a{
         font-size: 2.8vw;
     }
 
-    .news h3{
+    .actualites h3{
         margin-bottom: 1%;
         font-size: 3.5vw;
     }
