--- a/maj/assets/css/index.css
+++ b/maj/assets/css/index.css
@@ -38,26 +38,30 @@ h2{
     font-size: 2.5vw;
 }
 
-h3{
-    font-size: 1.5vw;
-}
-
 /* textes */
 p{
-    font-size: 1.5vw;
+    font-size: 1.4vw;
 }
 
 /* liens */
 a{
+    justify-self: flex-start;
     font-weight: bold;
     text-decoration: none;
     color: var(--primary-color);
     border-bottom: 2px solid transparent;
-    transition: border-bottom 0.25s;
+    transition: 0.25s;
 }
 
-a:hover:not(header #logo, footer div:last-child a, .current){
-    border-bottom: 2px solid var(--primary-color);
+a:hover:not(header #logo, footer #socials a),
+a:active:not(header #logo, footer #socials a){
+    color: var(--highlight-color);
+    border-bottom: 2px solid var(--highlight-color);
+}
+
+.current{
+    color: var(--highlight-color);
+    border-bottom: 2px solid var(--highlight-color);
 }
 
 /* images */
@@ -107,11 +111,6 @@ header nav ul li {
     text-transform: lowercase;
 }
 
-.current{
-    color: var(--highlight-color);
-    border-bottom: 2px solid var(--highlight-color);
-}
-
 /* //////////////////// éléments du main //////////////////// */
 
 /* tous les éléments du main */
@@ -120,16 +119,16 @@ main > *{
 }
 
 /* accueil > à propos */
-#apropos h2{
+#a-propos h2{
     margin-bottom: 0;
     font-size: 2.5vw;
 }
 
-#apropos p:nth-child(1){
+#a-propos p:nth-child(1){
     font-size: 4vw;
 }
 
-#apropos p{
+#a-propos p{
     margin-bottom: 3%;
     width: 100%;
     font-size: 2vw;
@@ -169,20 +168,12 @@ main > *{
 }
 
 .actualites a{
-    transition: color 0.25s;
-}
-
-.actualites a:hover{
-    color: var(--highlight-color);
-}
-
-.actualites h3{
-    margin-bottom: 3%;
     font-size: 2vw;
-    line-height: 1.1em;
+    line-height: 1.3em;
 }
 
 .actualites p{
+    margin-top: 2%;
     font-weight: normal;
 }
 
@@ -201,7 +192,7 @@ article h2{
 }
 
 /* services / équipe > boutons */
-.accordion{
+.accordion-button{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -216,25 +207,25 @@ article h2{
     transition: 0.25s;
 }
 
-.accordion h2{
+.accordion-button h1{
     font-size: 3vw;
 }
 
-.accordion span{
+.accordion-button span{
     text-transform: uppercase;
 }
 
-.accordion sup{
+.accordion-button sup{
     font-size: 1.2vw;
     opacity: 0.6;
 }
 
-.active, .accordion:hover{
+.active, .accordion-button:hover{
     /* si bouton actif ou en survol, changement de couleur */
     background-color: var(--highlight-color);
 }
 
-.accordion:after{
+.accordion-button:after{
     /* ajout du plus */
     content: '+';
     margin-right: 3%;
@@ -247,8 +238,8 @@ article h2{
     content: "-";
 }
 
-/* services / équipe > panel */
-.panel{
+/* services / équipe > accordion-panel */
+.accordion-panel{
     display: none;
     padding: 2%;
     max-height: 0;
@@ -257,15 +248,15 @@ article h2{
     background-color: var(--bg-color);
 }
 
-.panel p:first-child{
+.accordion-panel p:first-child{
     margin-bottom: 2%;
 }
 
-.panel h3{
+.accordion-panel h2{
     font-size: 1.5vw;
 }
 
-.panel div{
+.accordion-panel div{
     display: flex;
     flex-flow: row nowrap;
     column-gap: 3%;
@@ -313,11 +304,16 @@ iframe{
 /* //////////////////// éléments du footer //////////////////// */
 
 footer{
+    align-items: start;
     bottom: 0;
     margin-top: 5%;
     padding-top: 2%;
     width: 100%;
     border-top: solid 2px var(--primary-color)
+}
+
+footer div{
+    margin: 0 5% 2% 0;
 }
 
 /* partenaires */
@@ -337,19 +333,27 @@ footer img{
     max-height: 60px;
 }
 
-/* où nous trouver / mentions légales / réseau sociaux */
+/* où nous trouver / nous contacter / mentions légales / adhésion */
 footer div:nth-child(n+2){
     grid-column: span 2;
 }
 
-/* logo réseaux sociaux */
+footer div:last-child{
+    grid-column: span 6;
+}
+
 footer a{
-    font-size: 1.3vw;
+    font-size: 1.4vw;
+}
+
+/* logo réseaux sociaux */
+footer #socials{
+    margin-top: 5%;
 }
 
 footer svg{
     margin-right: 10%;
-    width: 10%;
+    width: 12%;
     fill: var(--primary-color);
     transition: fill 0.25s;
 }
