--- a/maj/assets/css/index.css
+++ b/maj/assets/css/index.css
@@ -335,26 +335,24 @@ iframe{
 
 footer{
     align-items: start;
-    bottom: 0;
     margin-top: 5%;
-    padding-top: 2%;
     width: 100%;
     border-top: solid 2px var(--primary-color)
 }
 
-footer div{
-    margin: 0 5% 2% 0;
+footer > div{
+    margin: 0;
+    display: flex;
+    flex-flow: column wrap;
 }
 
 /* partenaires */
 footer div:first-child{
     grid-column: 1 / span 12;
-    display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
     align-items: center;
-    /* gap: 1%; */
-    margin-bottom: 2%;
+    margin: 2% 0 2% 0;
     width: 100%;
 }
 
@@ -364,22 +362,40 @@ footer img{
     max-height: 60px;
 }
 
-/* où nous trouver / nous contacter / mentions légales / adhésion */
-footer div:nth-child(n+2){
-    grid-column: span 2;
+/* où nous trouver / adhésion / nous contacter / mentions légales */
+footer div:nth-child(2){
+    grid-column: span 12;
+}
+
+footer > div:nth-child(3){
+    grid-column: 1 / span 2;
+}
+
+footer > div:nth-child(4){
+    grid-column: 4 / span 2;
+}
+
+footer div:nth-child(5){
+    grid-column: 10 / span 2;
 }
 
 footer div:last-child{
-    grid-column: span 6;
+    grid-column: 10 / span 3;
+    grid-row-start: 4;
 }
 
-footer a{
-    font-size: 1.4vw;
+footer div:nth-child(2) p{
+    margin: 0;
+}
+
+footer div:nth-child(3) p,
+footer div:nth-child(4) p{
+    margin-bottom: 5%;
 }
 
 /* logo réseaux sociaux */
 footer #socials{
-    margin-top: 5%;
+    margin: 5% 0 0 0;
 }
 
 footer svg{
