--- a/maj/assets/css/media-queries.css
+++ b/maj/assets/css/media-queries.css
@@ -82,15 +82,30 @@
         width: 95%;
     }
 
-    footer div{
-        margin-top: 2%;
-        width: 100%;
-    }
-
     footer div:first-child{
-        grid-column: span 3;
+        grid-column: 1 / span 3;
         flex-flow: row wrap;
         justify-content: flex-start;
+    }
+
+    footer div:nth-child(2){
+        grid-column: span 3;
+    }
+
+    footer > div:nth-child(3){
+        grid-column: 1 / span 1;
+    }
+
+    footer > div:nth-child(4){
+        grid-column: 2 / span 1;
+    }
+
+    footer div:nth-child(5){
+        grid-column: 3 / span 1;
+    }
+
+    footer div:last-child{
+        grid-column: 3 / span 1;
     }
 
     footer img{
@@ -99,19 +114,7 @@
         max-height: 30px;
     }
 
-    footer div:nth-child(n+2){
-        grid-column: span 1;
-    }
-
-    footer div:nth-child(5){
-        grid-column: span 3;
-    }
-
-    footer a{
-        font-size: 3vw;
-    }
-
-    footer svg{
-        width: 10%;
+    footer #socials{
+        margin: 2% 0 0 0;
     }
 }
