--- a/maj/assets/css/index.css
+++ b/maj/assets/css/index.css
@@ -155,7 +155,13 @@ main > *{
     width: auto;
 }
 
-#ticker p:nth-child(1){
+#ticker img{
+    margin: 0;
+    width: auto;
+    max-height: 50px;
+}
+
+#ticker p:first-of-type{
     font-weight: bold;
 }
 
@@ -197,21 +203,6 @@ main > *{
 .pagination nav{
     display: flex;
     gap: 2%;
-}
-
-/* actualités > articles actualités */
-article img{
-    margin-top: 2%;
-    margin-bottom: 2%;
-    width: 90%;
-}
-
-article h1{
-    margin-top: 2%;
-}
-
-article > h1, h2, p{
-    margin-bottom: 1%;
 }
 
 /* services / équipe > boutons */
@@ -292,6 +283,44 @@ article > h1, h2, p{
     flex-flow: row nowrap;
     column-gap: 3%;
     height: auto;
+}
+
+/* actualités / services > articles */
+article img{
+    margin-top: 2%;
+    margin-bottom: 2%;
+    width: 90%;
+}
+
+article h1{
+    margin-top: 2%;
+}
+
+article > h1, h2, p{
+    margin-bottom: 1%;
+}
+
+/* service > permanences partenaires */
+.partenaires{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5%;
+    text-align: center;
+}
+
+.partenaires figure{
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+
+.partenaires img{
+    margin-bottom: 5%;
+    width: auto;
+    max-height: 60px;
+}
+
+.partenaires h2{
+    font-size: 1.8vw;
 }
 
 /* contact > formulaire */
