--- a/maj/assets/css/index.css
+++ b/maj/assets/css/index.css
@@ -278,11 +278,25 @@ main > *{
     font-size: 1.5vw;
 }
 
-.accordion-panel div{
-    display: flex;
-    flex-flow: row nowrap;
-    column-gap: 3%;
-    height: auto;
+.accordion-panel > #partenaires{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
+}
+
+#partenaires figure{
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+
+#partenaires img{
+    margin-bottom: 5%;
+    width: auto;
+    max-height: 60px;
+}
+
+#partenaires h2{
+    font-size: 1.8vw;
 }
 
 /* actualités / services > articles */
@@ -298,29 +312,6 @@ article h1{
 
 article > h1, h2, p{
     margin-bottom: 1%;
-}
-
-/* service > permanences partenaires */
-.partenaires{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 5%;
-    text-align: center;
-}
-
-.partenaires figure{
-    margin-top: 10%;
-    margin-bottom: 10%;
-}
-
-.partenaires img{
-    margin-bottom: 5%;
-    width: auto;
-    max-height: 60px;
-}
-
-.partenaires h2{
-    font-size: 1.8vw;
 }
 
 /* contact > formulaire */
