--- a/maj/assets/css/index.css
+++ b/maj/assets/css/index.css
@@ -13,7 +13,7 @@
     --secondary-color: #b3b3b3;
     --highlight-color: #45accc;
     --highlight-secondary-color: #505050;
-    --bg-color: #ffffff;
+    --bg-color: #ebebeb;
 }
 
 /* conteneurs */
@@ -46,22 +46,22 @@ p{
 /* liens */
 a{
     justify-self: flex-start;
+    font-size: 1.4vw;
     font-weight: bold;
-    text-decoration: none;
+    text-decoration: underline;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 10%;
     color: var(--primary-color);
-    border-bottom: 2px solid transparent;
     transition: 0.25s;
 }
 
-a:hover:not(#logo, .accordion-button a, #socials a),
-a:active:not(#logo, .accordion-button a, #socials a){
+a:hover:not(#logo, #socials a),
+a:active:not(#logo, #socials a){
     color: var(--highlight-color);
-    border-bottom: 2px solid var(--highlight-color);
 }
 
-.current{
+.courant{
     color: var(--highlight-color);
-    border-bottom: 2px solid var(--highlight-color);
 }
 
 /* images */
@@ -80,23 +80,26 @@ header #logo{
 }
 
 header #logo img{
-    width: 20vw;
+    width: 24vw;
 }
 
 /* entrez / qui ? */
-#entrez, #qui{
+#entrez, #qui, header nav{
     grid-column: 2 / span 11;
-    margin-left: 2%;
-    align-self: center;
+    align-self: flex-start;
     justify-self: flex-start;
+    margin-top: 1%;
+    margin-left: 4%;
     font-size: 2vw;
+}
+
+#qui{
+    display: none;
 }
 
 /* navbar */
 header nav{
-    grid-column: 1 / span 12;
-    margin: 2% 0 5% 0;
-    width: 100%;
+    justify-self: auto;
 }
 
 header nav ul{
@@ -105,13 +108,20 @@ header nav ul{
 }
 
 header nav ul li {
-    font-size: 1.8vw;
-    font-weight: bold;
     list-style-type: none;
+}
+
+header nav ul li a{
+    font-size: 2vw;
+    font-weight: bold;
     text-transform: lowercase;
 }
 
 /* //////////////////// éléments du main //////////////////// */
+
+main{
+    margin: 5% 0 5% 0;
+}
 
 /* tous les éléments du main */
 main > *{
@@ -119,29 +129,39 @@ main > *{
 }
 
 /* accueil > à propos */
-#a-propos h1{
-    margin-bottom: 1%;
+#a-propos p:first-child{
+    margin-top: 5%;
+    font-size: 4vw;
+    text-align: justify;
+    hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
 }
 
-#a-propos h2{
-    margin-bottom: 0.5%;
-    font-size: 2.5vw;
+#a-propos section:nth-child(even){
+    margin-top: 9%;
 }
 
-#a-propos p:first-of-type{
-    margin-top: 3%;
+#a-propos section:nth-child(odd){
+    margin-top: 6%;
+}
+
+#a-propos section h1 {
     font-size: 3vw;
 }
 
-#a-propos p{
-    margin-bottom: 2%;
-    width: 100%;
+#a-propos section p{
     font-size: 2vw;
+    text-align: justify;
+    hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
 }
 
 /* actualités > ticker + slider */
 #ticker{
     margin-top: 0;
+    margin-bottom: 4%;
     overflow: hidden;;
 }
 
@@ -152,8 +172,8 @@ main > *{
 
 #ticker .splide__slide{
     margin: auto auto 0 auto;
-    padding: 2%;
-    width: auto;
+    padding: 0 3% 0 3%;
+    max-width: 48%;
 }
 
 #ticker img{
@@ -171,20 +191,15 @@ main > *{
 }
 
 #slider{
-    margin-bottom: 5%;
+    margin-bottom: 10%;
 }
 
-#slider img{
-    width: 90%;
-}
-
-#slider .splide__progress{
-    width: 90%;
-    margin: auto;
+#slider .splide__arrow{
+    display: none;
 }
 
 #slider .splide__pagination{
-    bottom: -1.5em;
+    top: 102%;
 }
 
 #slider .splide__pagination__page {
@@ -202,7 +217,7 @@ main > *{
     padding: 10%;
     height: 12vw;
     overflow: hidden;
-    border: solid 2px black;
+    background-color: var(--bg-color);
 }
 
 .actualites a{
@@ -212,6 +227,10 @@ main > *{
 
 .actualites p{
     margin-top: 2%;
+}
+
+.pagination{
+    margin-bottom: 5%;
 }
 
 .pagination nav{
@@ -227,7 +246,7 @@ main > *{
     align-items: center;
     padding: 1%;
     width: 100%;
-    background-color: var(--bg-color);
+    background-color: transparent;
     color: var(--primary-color);
     border: none;
     outline: none;
@@ -394,7 +413,7 @@ footer{
     align-items: start;
     margin-top: 5%;
     width: 100%;
-    border-top: solid 2px var(--primary-color)
+    /* border-top: solid 2px var(--bg-color); */
 }
 
 footer > div{
@@ -409,7 +428,7 @@ footer div:first-child{
     flex-flow: row nowrap;
     justify-content: space-around;
     align-items: center;
-    margin: 2% 0 2% 0;
+    margin: 5% 0 4% 0;
     width: 100%;
 }
 
@@ -450,9 +469,17 @@ footer div:nth-child(4) p{
     margin-bottom: 5%;
 }
 
+footer a{
+    font-weight: normal;
+}
+
 /* logo réseaux sociaux */
 footer #socials{
     margin: 5% 0 0 0;
+}
+
+footer #socials a{
+    text-decoration: none;
 }
 
 footer svg{
